# applications

./: .gitignore  .gitlab-ci.yml  AddWekaClassesToPath.m  BackgroundMaskProcess.m  BackgroundMasksProcess.m  BioImageReader.m  BioSensorsPackage.m  Biosensors Processing Package User Manual.docx  BiosensorsPackage.java  BiosensorsPackage.m  BlobDetectionGUI.fig  BlobDetectionGUI.m  BranchDetectionProcess.m  BuildWekaModelForRegionMerging.m  CellCycleStateClassifier_TwoStage_G1_SG2M.m  CellCycleStateIdentificationParametersGUI.m  CellPatternAnnotator.fig  CellPatternAnnotator.m  CellPatternAnnotatorHistory.mat  CellPatternAnnotatorParametersGUI.m  CellPatternAnnotatorVer1.m  CellSegmentationQualityAnnotator.fig  CellSegmentationQualityAnnotator.m  CellSegmentationQualityAnnotatorHistory.mat  CellStateAnalyzer.fig  CellStateAnalyzer.m  CellStateAnalyzerHistory.mat  Channel3D.m  CompareCellPatternAnnotations.m  CompareSeedPointDetectionApproaces.m  ComputeCellStateClassificationFeatures_G1S_G2_M.m  ComputeCellStateClassificationFeatures_G1_SG2M.m  ComputeCellStateClassificationFeatures_G1_S_G2M.m  ComputeCellStateClassificationFeatures_Interphase_Mitotic.m  ComputeEllipsoidRadii.m  ComputeImageIntensityRange.m  ConvertCSVFileToArffFile.m  CorrectTwoPhotonConfocalStageShift.m  DNADamageAnalyzer.fig  DNADamageAnalyzer.m  (+618 more)
2.0/: FlowAnalysisProcess.m  FlowTrackingProcess.m  NoiseEstimationProcess.m  QFSMPackage.m  SpeckleDetectionProcess.m  SpeckleDisplay.m  analyzeFlow.m  analyzeMovieFlow.m  analyzeMovieSpeckles.m  buildSpeckleArray.m  calculateStackNoiseParam.m  classifyKineticEvents.m  createSpeedMaps.m  detectMovieSpeckles.m  detectSpeckles.m  flowAnalysisProcessGUI.m  flowTrackingProcessGUI.m  noiseEstimationProcessGUI.m  propagateSpecklePositions.m  qfsmPackageGUI.m  speckleTrackingProcessGUI.fig  trackMovieFlow.m  trackMovieSpeckles.m  trackSpeckles.m  trackStackFlow.m
2dActionRecognition/: pcAnalysis.m  pcCellRoiMD.m  pcCorrectGlobalMotionMD.m  pcDetectMotionEvents.m  pcDetectMotionEventsMD.m  pcDetectionMD.m  pcDetectionMovie.m  pcDetectionPPBackTrack.m  pcDetectionPPCalcLocalMatchScoreMD.m  pcDetectionPPFilterLocalMatchScore.m  pcFineMatchingScores.m  pcFineMatchingScoresMD.m  pcGetCell.m  pcGetLbpData.m  pcInitParamsDirs.m  pcInitParamsDirsMD.m  pcInitiateData.m  pcInitiateDataThirdGen.m  pcLBPMD.m  pcLocalizeMotionEventsMD.m  pcMorphLocalSpeedMD.m  pcPrepareForTracking.m  pcProcessTimeLapseMD.m  pcSingleCellMovies.m  pcSingleCell_dLBP.m  pcTracking.m  pcTrackingMovie.m  pcTrackingMovieLong.m  pcVisualizeTracking.m  runErik1m_stable.m  scriptCLCTrackingPhillipe.m  tracker_paramPhillipe.m
3dFISH/: calPsfParms.m  findNuclei.m  imagePathHistory.mat  nucleiPlot.m  pointSourceFindNuclei.m  pointSourceSpotsDetection.m  pointSourceSpotsDetection3D.m  pointSourceSpotsPlot.m  read3dFISH.m  segmentNucleiLocalOtsu.m  singleNucleusSpotDetection.m  spotFind3D.m  spotsDetection3D.m  spotsPair.m  spotsPlot3.m  spotsPlot3Paired.m
3dmicroscopy/: amplitudeGrating.m  yFieldOfView.m
3dmigration/: BranchDetectionProcess.m  MaskGeometry3DProcess.m  MaskObjectTrackingProcess.m  MaskedIntensity3DProcess.m  MovieData3D.m  PhotoBleachCalcProcess3D.m  SegmentationProcess3D.m  SkeletonPruningProcess.m  SkeletonTrackingProcess.m  SkeletonizationProcess.m  adjacentMeshElements.m  adjustROIMaskGeometry.m  adjustROISkeletonGraph.m  analyze3DImageMaskedIntensities.m  analyze3DMaskGeometry.m  analyze3DMovieMaskGeometry.m  analyze3DMovieMaskedIntensities.m  analyze3DMovieMigration.m  analyzeSkeletonDistanceFromPoint.m  analyzeSkeletonTipPaths.m  batchProcess3DMigrationMovies.m  batchSub3DMigration.m  branchRadii.m  bwMaxDirectDist3D.m  calcBranchDirections.m  calcBranchTipDirections.m  calcLocalAvgCurvatures.m  centerMostPoint3D.m  checkMovieArrayCompletion.m  create3DMovieROI.m  curvColormap.m  curveDirection3D.m  detectMovieBranches.m  edgeDepths.m  findBodyVerts.m  findTips.m  getBranchesFromMask.m  getCurvCategories.m  graphVertDegree.m  huntersFancySegmentation.m  (+35 more)
CD36/: corrMotionTypeWithMTs.m
CD36Macrophages/: radialArrangement.m
CMSO/: detection2table.m  featureTracks2table.m  saveCMSOPosition.m  tracks2table.m  tracks2tableJoin.m.m
DEPRECATED/: computeLifeTime2Dist.m  displayTMDelay.m  distance2edge.m  getMovieSegmentDetection.m  makeFAFigure1.m
DetectionProgram/: main283.m  main283AUTO.m  main283AUTO_cluster.m  main283_ML7.asv  main283_ML7.m  wlocav.m  wstarck2.m  wstarck222.m  wtlo2.m
EB-tracker/: batchTest.m  eb1SpotDetector.m  gaga.m  getCircle.m  getOrderedLineSegs.m  getProj.m  getVelocitiesFromMat.m  imIntegrator.m  setupDirectories.m  spotsOverTime.m
EB1/: EB3a.m  groupingLAP.m  lineIntersect.m  parseGroups.m  plotGroup.m  selectTracks.m  track2Poles.m  trackPoles.m
EB3Tracker/: batchEB3analysis.m  batchEBdetection.m  breakNonlinearTracks.m  checkIfDone.m  collectData.m  combineGroupListFiles.m  combineProjListFiles.m  configuTSdata.m  configureEB3Directories.m  costMatLinearMotionCloseGaps_EB3.m  costMatLinearMotionLink_EB3.m  distributionPlot_JD.m  eb1SpotDetector.m  featVelMovie.m  generateMovieDatabase.m  getProj.m  getVelocitiesFromMat.m  helper_script.m  helper_script_EB3.m  kalmanGainLinearMotion_EB3.m  kalmanInitLinearMotion_EB3.m  makeImageDirectory.m  metaEB3analysis.m  pixPerFrame2umPerMin.m  plotTracks2D_EB3.m  plusTipBatchQuadPlot.m  plusTipBatchSubRoi.m  plusTipBreakNonlinearTracks.m  plusTipCheckFeatureDensity.m  plusTipCheckIfDone.m  plusTipCometDetector.m  plusTipCostMatCloseGaps.m  plusTipCostMatLinearMotionLink.m  plusTipDynamParam.m  plusTipEventSpeedOverlay.m  plusTipExtractGroupData.m  plusTipGetGroupDataset.m  plusTipGetPooledData.m  plusTipGetSubtrackCoords.m  plusTipGroupDataQuadPlot.m  (+42 more)
intravital/matitk_custom_src/: CMakeLists.txt  FindMatlab.cmake  MATITKTemplatedVariables.h  ParameterContainer.h  ParameterContainer.inl  functionDescr.inl  itkcore.inl  itkfiltercore.h  itkfiltercore.inl  itkregistrationcore.h  itkregistrationcore.inl  itksegmentationcore.h  matitk_compilation_bug.txt  matitk_custom.h  seedcontainer.h  seedcontainer.inl  typedefs.inl
(+9025 files in other folders)
